--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -1,9 +1,16 @@
-<h1>Add Blog Post</h1>
+{% extends 'blog/base.html' %}
 
-<!--<a href="{% url 'blog:add_post' %}">Add Post</a>-->
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button>Post</button>
-</form>
+{% block content %}
+    {% if request.user.is_authenticated %}
+        <div class="container">
+            <h1 class="mt-5">Add Blog Post</h1>
+
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-primary mt-3">Post</button>
+            </form>
+        </div>
+    {% endif %}
+{% endblock %}
