--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -2,14 +2,19 @@
 
 {% block content %}
 
-<h1>These are my blogs:</h1>
+{% if object_list.count > 0 %}
 
-<ul>
-{% for post in object_list %}
-    <li><h2><a href="{% url 'blog:detailed_article' post.pk %}">{{ post.title }}</a> - {{ post.author }}</h2>
-    {{ post.date }}
-    {{ post.body }}</li>
-{% endfor %}
-</ul>
+    <h2>Это последние посты:</h2>
+
+    {% for post in object_list %}
+        <h3><a href="{% url 'blog:detailed_article' post.pk %}">{{ post.title }}</a></h3>
+        <strong>Дата: {{ post.date }} | Категория: {{ post.category }} | Пост написан: {{ post.author }}</strong>
+        <p>{{ post.body|truncatechars:200|safe }}</p>
+        <hr>
+    {% endfor %}
+
+{% else %}
+    <h3>Постов пока нет :)</h3>
+{% endif %}
 
 {% endblock %}
