--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -48,7 +48,7 @@
                 {{ user.username }}
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="{% url 'blog:add_post' %}">Добавить блог</a>
+                <a class="dropdown-item" href="{% url 'blog:add_post' %}">Добавить пост</a>
                 <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
                 <form method="post" action="{% url 'users:logout' %}">
                   {% csrf_token %}
