--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -7,8 +7,8 @@
     <h2>Это последние посты:</h2>
 
     {% for post in object_list %}
-        <h3><a href="{% url 'blog:detailed_article' post.pk %}">{{ post.title }}</a></h3>
-        <strong>Дата: {{ post.date }} | Категория: {{ post.category }} | Пост написан: {{ post.author }}</strong>
+        <h3><a href="{% url 'blog:detailed_article' post.pk %}" style="color: #0000ff;">{{ post.title }}</a></h3>
+        <strong>Дата: {{ post.date }} | <a href="{% url 'blog:category' post.category %}">Категория: {{ post.category }}</a> | Пост написан: {{ post.author }}</strong>
         <p>{{ post.body|truncatechars:200|safe }}</p>
         <hr>
     {% endfor %}
