--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load blog_tags %}
 
 {% block content %}
 
@@ -8,7 +9,7 @@
 
     {% for post in object_list %}
         <h3><a href="{% url 'blog:detailed_article' post.pk %}" style="color: #0000ff;">{{ post.title }}</a></h3>
-        <strong>Дата: {{ post.date }} | <a href="{% url 'blog:category' post.category %}">Категория: {{ post.category }}</a> | Пост написан: {{ post.author }}</strong>
+        <strong>Дата: {{ post.date }} | <a href="{% url 'blog:category' post.category|slugify %}">Категория: {{ post.category|translate_category }}</a> | Пост написан: {{ post.author }}</strong>
         <p>{{ post.body|truncatechars:200|safe }}</p>
         <hr>
     {% endfor %}
@@ -16,5 +17,6 @@
 {% else %}
     <h3>Постов пока нет :)</h3>
 {% endif %}
+
 
 {% endblock %}
