--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load blog_tags %}
 <!doctype html>
 <html lang="en">
 
@@ -10,7 +11,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="{% static "portfolio/custom.css" %}">
+  <link rel="stylesheet" href="{% static "blog/custom.css" %}">
 
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
@@ -21,48 +22,66 @@
 
 <body>
 
-  <nav id="topNav" class="navbar navbar-expand-md navbar-light">
-    <div class="container">
-      <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static "portfolio/logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Nikita's Logo">
-        <span>Nikita Zhilenko</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-         <div class="dropdown d-inline-block">
-        </div>
-        {% if not request.user.is_authenticated %}
-            <div class="dropdown d-inline-block">
-                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Вход & Регистрация
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="{% url 'users:login' %}">Вход</a>
-                  <a class="dropdown-item" href="{% url 'users:register' %}">Регистрация</a>
-                </div>
-            </div>
-        {% else %}
-            <div class="dropdown">
-              <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{ user.username }}
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="{% url 'blog:add_post' %}">Добавить пост</a>
-                <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
-                <form method="post" action="{% url 'users:logout' %}">
-                  {% csrf_token %}
-                  <!-- Дополнительные поля формы, если необходимо -->
-                  <button type="submit" class="dropdown-item">Выход</button>
-                </form>
-
-              </div>
-            </div>
-        {% endif %}
-    </div>
-  </nav>
+  <nav id="topNav" class="navbar navbar-expand-md">
   <div class="container">
-    {% block content %}{% endblock %}
+    <a class="navbar-brand text-dark" href="{% url 'home' %}">
+      <img src="{% static "portfolio/logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Nikita's Logo">
+      <span>Nikita Zhilenko</span>
+    </a>
+
+    {% if categories_menu %}
+      <div class="dropdown d-inline-block">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownCategoryButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Категории
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownCategoryButton">
+          {% for category in categories_menu %}
+            <a class="dropdown-item" href="{% url 'blog:category' category|slugify %}">{{ category|translate_category }}</a>
+          {% endfor %}
+        </div>
+      </div>
+    {% else %}
+      <a class="dropdown-item" href="{% url 'blog:category_list' %}">Категории</a>
+    {% endif %}
+
+    {% if not request.user.is_authenticated %}
+      <div class="dropdown d-inline-block">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Вход & Регистрация
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="{% url 'users:login' %}">Вход</a>
+          <a class="dropdown-item" href="{% url 'users:register' %}">Регистрация</a>
+        </div>
+      </div>
+    {% else %}
+      <div class="dropdown">
+        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{ user.username }}
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="{% url 'blog:add_post' %}">Добавить пост</a>
+          <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+          <li><hr class="dropdown-divider"></li>
+          {% if request.user.is_superuser %}
+            <a class="dropdown-item" href="http://127.0.0.1:8000/admin">Админ-панель</a>
+          {% endif %}
+          <form method="post" action="{% url 'users:logout' %}">
+            {% csrf_token %}
+            <button type="submit" class="dropdown-item">Выход</button>
+          </form>
+        </div>
+      </div>
+    {% endif %}
+  </div>
+</nav>
+
+
+
+  <div class="flex-container">
+    <div class="container">
+      {% block content %}{% endblock %}
+    </div>
   </div>
 
   <!-- Optional JavaScript -->
@@ -71,6 +90,5 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
