--- a/blog/templates/blog/categories.html
+++ b/blog/templates/blog/categories.html
@@ -1,16 +1,16 @@
 {% extends 'blog/base.html' %}
-
+{% load blog_tags %}
 {% block content %}
 
 {% if posts_categories %}
     <br>
-    <h2>Посты с категорией: {{ ctg }}</h2>
+    <h2>Посты с категорией: {{ ctg|translate_category }}</h2>
     <br>
 
 
     {% for post in posts_categories %}
         <h3><a href="{% url 'blog:detailed_article' post.pk %}" style="color: #0000ff;">{{ post.title }}</a></h3>
-        <strong>Дата: {{ post.date }} | Категория: {{ post.category }} | Пост написан: {{ post.author }}</strong>
+        <strong>Дата: {{ post.date }} | Категория: {{ post.category|translate_category }} | Пост написан: {{ post.author }}</strong>
         <p>{{ post.body|truncatechars:200|safe }}</p>
         <hr>
     {% endfor %}
