--- a/blog/templates/blog/detailed_article.html
+++ b/blog/templates/blog/detailed_article.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load blog_tags %}
 
 {% block content %}
 
@@ -6,12 +7,12 @@
   <div class="post-info">
     <hr>
     <p><strong>Автор:</strong> {{ post.author }}</p>
-    <p><strong>Категория: <a href="{% url 'blog:category' post.category %}">{{ post.category }}</a></strong></p>
+    <p><strong>Категория: <a href="{% url 'blog:category' post.category %}">{{ post.category|translate_category }}</a></strong></p>
     <p><strong>Пост написан:</strong> {{ post.date }}</p>
     <hr>
   </div>
   <div class="post-content">
-    <h1>{{ post.title }}</h1>
+    <h2>{{ post.title }}</h2>
     <p>{{ post.body|safe }}</p>
   </div>
 </div>
